[tool.poetry]
name = "mailman_held_messages"
version = "1.0"
description = "A quick way to process held messages for Mailman v2."
authors = ["EdLeafe <ed@leafe.com>"]
license = "Apache License, Version 2.0"

[tool.poetry.dependencies]
python = "^3.6.2"
requests = "^2.26.0"
beautifulsoup4 = "^4.10.0"
rich = "^10.14.0"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
black = "^21.11b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | _build
    | build
    | dist
  )/
)
'''
